--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,3 +14,6 @@ timeout: '1200s'  # This sets the timeout to 20 minutes
 # You can also specify images to be pushed to Google Container Registry or Artifact Registry
 images:
   - 'gcr.io/$PROJECT_ID/my-python-app'
+  options:
+  logging: CLOUD_LOGGING_ONLY
+
